unpackaged/main/default/objects/pse__Time_Variance_Detail__c/pse__Time_Variance_Detail__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__TimeVarianceHelp</customHelpPage>
    <description>Contains time variance calculation details for a single region, practice, or group.  FinancialForce PSA calculates time variance as a percentage based on the number of approved working hours divided into the number of recorded working hours. You can reflect this as a percentage or as strict hours. Time variance calculations are a lookup to the Time Variance Calculation object.</description>
    <label>Time Variance</label>
    <nameField>
        <displayFormat>TV-{0}</displayFormat>
        <label>Time Variance Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Time Variances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>