unpackaged/main/default/objects/pse__Time_Variance_Detail__c/fields/psaws__Is_Last_Week__c.field-meta.xml
<CustomField>
    <fullName>psaws__Is_Last_Week__c</fullName>
    <description>The formula field checks whether the related Time Variance Calculations Date Time is of current week or not.</description>
    <formula>ISPICKVAL(pse__Time_Variance_Calculation__r.pse__Date_Type__c, "Last Week")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Last Week</label>
    <type>Checkbox</type>
</CustomField>