unpackaged/main/default/objects/pse__Time_Variance_Detail__c/fields/psaws__Time_Variance_Difference__c.field-meta.xml
<CustomField>
    <fullName>psaws__Time_Variance_Difference__c</fullName>
    <description>The formula field calculates the difference between Work Calendar Hours and Total Hours Submitted for the Time Variance object.</description>
    <formula>pse__Work_Calendar_Hours__c - pse__Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Variance Difference</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>