unpackaged/main/default/objects/pse__Time_Variance_Detail__c/fields/pse__Credited_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Credited_Hours__c</fullName>
    <description>The number of submitted hours that are credited.</description>
    <inlineHelpText>The number of submitted hours that are credited.</inlineHelpText>
    <label>Credited Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>