unpackaged/main/default/objects/pse__Time_Variance_Detail__c/fields/pse__Excluded_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Excluded_Hours__c</fullName>
    <description>The number of submitted hours that are excluded.</description>
    <inlineHelpText>The number of submitted hours that are excluded.</inlineHelpText>
    <label>Excluded Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>