unpackaged/main/default/objects/pse__Time_Variance_Detail__c/fields/pse__Group__c.field-meta.xml
<CustomField>
    <fullName>pse__Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Time Variances</relationshipLabel>
    <relationshipName>Time_Variances</relationshipName>
    <type>Lookup</type>
</CustomField>