unpackaged/main/default/objects/pse__Time_Variance_Detail__c/fields/pse__Time_Variance_Calculation__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Variance_Calculation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Variance Calculation</label>
    <referenceTo>pse__Time_Variance_Calculation__c</referenceTo>
    <relationshipLabel>Time Variance Details</relationshipLabel>
    <relationshipName>Time_Variance_Details</relationshipName>
    <type>Lookup</type>
</CustomField>