unpackaged/main/default/objects/pse__Time_Variance_Detail__c/fields/pse__Variance__c.field-meta.xml
<CustomField>
    <fullName>pse__Variance__c</fullName>
    <label>Variance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>