unpackaged/main/default/objects/pse__Time_Variance_Detail__c/fields/pse__Work_Calendar_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Work_Calendar_Hours__c</fullName>
    <description>The number of hours from the Resource's Work Calendar.</description>
    <inlineHelpText>The number of hours from the Resource's Work Calendar.</inlineHelpText>
    <label>Work Calendar Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>